@@ -13,6 +13,8 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.access.AccessDeniedHandler;
+import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
@@ -47,13 +49,15 @@ public class SecurityConfig {
                 .cors((cors) -> cors
                         .configurationSource(request -> {
                             CorsConfiguration configuration = new CorsConfiguration();
-                            configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://34.47.90.224:8080", "http://34.47.90.224:3000"));
-                            configuration.setAllowedMethods(Collections.singletonList("*"));
+                            configuration.setAllowedOrigins(List.of(
+                                    "http://localhost:3000",
+                                    "http://34.47.90.224:8080",
+                                    "http://34.47.90.224:3000"));
+                            configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE"));
                             configuration.setAllowCredentials(true);
                             configuration.setAllowedHeaders(Collections.singletonList("*"));
-                            // configuration.setMaxAge(3600L);
-                            configuration.setExposedHeaders(Collections.singletonList("*"));
-                            configuration.addExposedHeader("access");
+                            configuration.setMaxAge(3600L);
+                            configuration.setExposedHeaders(List.of("access", "Content-Disposition"));
                             return configuration;
                         }))
                 .formLogin((auth) -> auth.disable())
@@ -62,12 +66,45 @@ public class SecurityConfig {
         // 경로별 접근 제어
         http.authorizeHttpRequests((request) ->
                 request
-                        .requestMatchers("/login", "/emp/**", "/reissue").permitAll()
+                        // 전체 접근
+                        .requestMatchers("/login", "/reissue","/api/s3/**").permitAll()
+
+                        // Swagger 경로 접근
+                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html", "/swagger-resources/**").permitAll()
+
+                        // 관리자 접근
                         .requestMatchers("/admin/**").hasRole("ADMIN")
-                        // Swagger 문서 관련 경로 전체 접근 허용
-                        // .requestMatchers("/swagger-ui/**").permitAll()
+
+                        /* 사원 */
+                        .requestMatchers("/emp/**").hasAnyRole("ADMIN", "EMPLOYEE")
+
+                        /* 채팅 */
+                        .requestMatchers("/chat/**").hasAnyRole("ADMIN", "EMPLOYEE")
+                        .requestMatchers("/chatroom/**").hasAnyRole("ADMIN", "EMPLOYEE")
+                        .requestMatchers("/message/**").hasAnyRole("ADMIN", "EMPLOYEE")
+                        .requestMatchers("/ws/**").permitAll()
+
+                        /* 휴가 */
+                        .requestMatchers("/vacation/**").hasAnyRole("ADMIN", "EMPLOYEE")
+                        /* 근태 */
+                        .requestMatchers("/attendance/**").hasAnyRole("ADMIN", "EMPLOYEE")
+                        /* 할일 */
+                        .requestMatchers("/todo/**").hasAnyRole("ADMIN", "EMPLOYEE")
+                        /* 게시판 */
+                        .requestMatchers("/post/**", "/comment/**").hasAnyRole("ADMIN", "EMPLOYEE")
+
+                        /* 급여 */
+                        .requestMatchers("/salary/**").hasAnyRole("ADMIN", "EMPLOYEE")
+
                         // .anyRequest().permitAll());          // 전체 허용(임시)
                         .anyRequest().authenticated());
+
+        // 인증되지 않은 사용자 처리
+        http.exceptionHandling((exceptions) -> exceptions
+                .authenticationEntryPoint(new HttpStatusEntryPoint(org.springframework.http.HttpStatus.UNAUTHORIZED)) // 401 처리
+                .accessDeniedHandler(accessDeniedHandler()) // 403 처리
+        );
+
         http
                 .addFilterBefore(new JwtAuthorizationFilter(jwtUtil), JwtAuthenticationFilter.class);
 
@@ -78,5 +115,15 @@ public class SecurityConfig {
         http.sessionManagement((sm) -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
 
         return http.build();
+    }
+
+    // 권한 없는 사용자 처리 핸들러
+    @Bean
+    public AccessDeniedHandler accessDeniedHandler() {
+        return (request, response, accessDeniedException) -> {
+            response.setStatus(org.springframework.http.HttpStatus.FORBIDDEN.value());
+            response.setContentType("application/json");
+            response.getWriter().write("{\"error\": \"Access Denied\", \"message\": \"접근 권한이 없습니다.\"}");
+        };
     }
 }
